--- a/style.css
+++ b/style.css
@@ -64,8 +64,8 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-block: 20px;
-    /* display: none; */
+    margin-block: 1.2rem;
+    
 }
 .weather-body img{
     width: 60%;
@@ -76,20 +76,26 @@ body{
     text-align: center;
 }
 
+.weather-box .name{
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-top: 0.3rem;
+}
+
 .weather-box .temperature{
-    font-size: 40px;
+    font-size: 2rem;
     font-weight: 800;
     position: relative;
 }
 
-.weather-box .temperature sup{
+/* .weather-box .temperature sup{
     font-size: 20px;
     position: absolute;
-    font-weight: 600;
-}
+    font-weight: 500;
+} */
 
 .weather-box .description{
-    font-size: 20px;
+    font-size: 1.4rem;
     font-weight: 700;
     text-transform: capitalize;
 }
